--- a/style.css
+++ b/style.css
@@ -229,43 +229,23 @@ span{
 
 .typing-text span{
     position: relative;
-}
-
-.typing-text span::before{
-    content: "software Developer";
     color: var(--color-base);
-    animation: words 20s infinite;
 }
 
 .typing-text span::after{
-    content: "";
-    background-color: var(--color-surface);
+    content: "|";
     position: absolute;
-    width: calc(100% + 8px);
-    height: 100%;
-    border-left: 3px solid var(--color-text);
-    right: -8;
-    animation: cursor 0.6s infinite;
+    right: -8px;
+    color: var(--color-base);
+    animation: cursor-blink 0.7s infinite;
 }
 
-@keyframes cursor{
-    to{
-        border-left: 3px solid var(--color-base);
+@keyframes cursor-blink{
+    0%, 50%{
+        opacity: 1;
     }
-}
-
-@keyframes words{
-    0%, 20%{
-        content: "Web Developer";
-    }
-    21%, 40%{
-        content: "Game Developer";
-    }
-    41%, 60%{
-        content: "Media Editor";
-    }
-    81%, 100%{
-        content: "Photographer";
+    51%, 100%{
+        opacity: 0;
     }
 }
 
